# OOP_lab5

./: CMakeLists.txt  README.md
src/: lab5.cpp
tests/: CMakeLists.txt  test_lab3.cpp
